--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "child_process": "^1.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "pg": "^8.7.1",
     "python-shell": "^3.0.0"
